# ogre-2.2-release

./: BUILD.bazel  CMakeLists.txt  ogre-2.2_2.1.9999~20210319~3aa42f.orig.tar.xz.delta  ogre-2.2_2.1.9999~20210319~3aa42f.orig.tar.xz.id  ogre-2.2_2.2.5+20210824~ec3f70c.orig.tar.gz.delta  ogre-2.2_2.2.5+20210824~ec3f70c.orig.tar.gz.id
Components/: BUILD.bazel
debian/: rules
